Major UI Code refactored # TODO - Many buggy features to fix - Generation button bug
Signed-off-by: zhaoxinn <zhaoxinzhang0429@gmail.com>